# ijon

./: .gitignore  Makefile  README.md  ijon.py  pyproject.toml  test_ijon.py
.github/workflows/: ci.yml
examples/: sandbox-e2b.py
tests/: test_agent.py  test_args.py  test_bash.py  test_client.py  test_config.py  test_mcp.py  test_skills.py  test_tool.py
