[project]
name = "ijon"
version = "0.1.0"
description = "Zero dependency AI harness with bash tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
ijon = "ijon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
