[project]
name = "ijon"
version = "0.1.0"
description = "Zero dependency AI harness with bash tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
ijon = "ijon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastmcp>=3.4.2",
    "pytest>=9.1.1",
    "pytest-httpserver>=1.1.5",
    "ruff>=0.15.16",
]
