[project]
name = "ijon"
version = "0.1.0"
description = "Zero dependency AI harness with bash tool"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Michał Czmiel" }]
keywords = ["ai", "agent", "llm", "harness", "mcp", "cli"]
dependencies = []

[project.urls]
Homepage = "https://github.com/michalczmiel/ijon"
Repository = "https://github.com/michalczmiel/ijon"
Issues = "https://github.com/michalczmiel/ijon/issues"

[project.scripts]
ijon = "ijon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "e2b>=2.10.2",
    "fastmcp>=3.4.2; python_version >= '3.10'",
    "pytest>=9.1.1; python_version >= '3.10'",
    "pytest-httpserver>=1.1.5; python_version >= '3.10'",
    "ruff>=0.15.16; python_version >= '3.10'",
]
